--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
