--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.1.7",
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
