--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-base64": "^0.2.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.2.0",
