--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "core-js": "3.33.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^4.0.0",
